--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         <div class="horizontalblock">
             <div class="contactform">
                 <p>Let's make your dreams come true:</p>
-                <form action="https://formsubmit.co/69b3777eba0c80b404bcf78e51695e23" method="post">
+                <form action="https://formsubmit.co/grigorenko996@gmail.com" method="post">
                     <input type="text" name="Name" placeholder="Your name" required>
                     <input type="email" name E-Mail placeholder="Your E-Mail" required>
                     <textarea name="ideas" id="ideas" placeholder="Describe your idea" rows="5"></textarea>
