--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                         </div>
                     </div>
                 </div>
+                <div class="line newline"></div>
                 <div id="arrow">
                     <a href="#projects"><img src="./images/icons8-arrow-100.png" alt=""></a>
                 </div>
@@ -154,6 +155,7 @@
                     <div class="videobox">
                         <video src="./images/chat-app.mov" class="preview" id="chatapp" muted></video>
                         <div id="hover1"><p>Hover to play</p></div>
+                        <img src="./images/_Users_ss_Desktop_coding_chat-app-css-illustration-master_index.html(iPhone 12 Pro).png" alt="Chat App preview">
                     </div>
                     <div class="description">
                         <h4>Chat App animated layout</h4>
@@ -234,7 +236,7 @@
         <div class="horizontalblock">
             <div class="contactform">
                 <p>Let's make your dreams come true:</p>
-                <form action="https://formspree.io/f/xbjnpdlb" method="post">
+                <form action="https://formsubmit.co/69b3777eba0c80b404bcf78e51695e23" method="post">
                     <input type="text" name="Name" placeholder="Your name" required>
                     <input type="email" name E-Mail placeholder="Your E-Mail" required>
                     <textarea name="ideas" id="ideas" placeholder="Describe your idea" rows="5"></textarea>
