--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <div class="videobox">
                         <video src="./images/chat-app.mov" class="preview" id="chatapp" muted></video>
                         <div id="hover1"><p>Hover to play</p></div>
-                        <img src="./images/_Users_ss_Desktop_coding_chat-app-css-illustration-master_index.html(iPhone 12 Pro).png" alt="Chat App preview">
+                        <img src="./images/chatapppreview.png" alt="Chat App preview">
                     </div>
                     <div class="description">
                         <h4>Chat App animated layout</h4>
