--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
                         </div>
                     </div>
                 </div>
-                <div class="line newline"></div>
                 <div id="arrow">
                     <a href="#projects"><img src="./images/icons8-arrow-100.png" alt=""></a>
                 </div>
@@ -61,22 +60,7 @@
             <h3>My recent jobs</h3>
             <div class="line"></div>
             <div class="projects-grid">
-                <div class="project-card c1 tall">
-                    <img src="./images/grgrnkoo.github.io_Huddle-Landing-Page-with-Curved-Sections_ (1).png" alt="Huddle Landing with Curved Sections" class="preview">
-                    <div class="description">
-                        <h4>Huddle Landing Page with Curved Sections</h4>
-                        <p>Responsive design for Huddle. You will be able to find second version with alternative design below</p>
-                        <div class="linkbar">
-                            <a href="https://grgrnkoo.github.io/Huddle-Landing-Page-with-Curved-Sections/" target="_blank"><button class="visit"><img src="./images/icons8-link.svg" alt=""><span>Visit website</span></button></a>
-                            <a href="https://github.com/grgrnkoo/Huddle-Landing-Page-with-Curved-Sections" target="_blank"><button class="github"><img src="./images/icons8-github.svg" alt=""><span>View on GitHub</span></button></a>
-                        </div>
-                        <div class="project-skills">
-                            <img src="./images/icons8-html5.svg" alt="HTML5" class="htmlimage">
-                            <img src="./images/icons8-css3.svg" alt="CSS3">
-                        </div>
-                    </div>
-                </div>
-                <div class="project-card c2">
+                <div class="project-card с1">
                     <img src="./images/grgrnkoo.github.io_Fylo-Landing-Page-With-Two-Columns-Layout__email= (1).png" alt="Fylo Landing page" class="preview">
                     <div class="description">
                         <h4>Fylo Landing Page</h4>
@@ -91,7 +75,41 @@
                         </div>
                     </div>
                 </div>
+                <div class="project-card с2">
+                    <div class="videobox">
+                        <video src="./images/chat-app.mov" class="preview" id="chatapp" muted></video>
+                        <div id="hover1"><p>Hover to play</p></div>
+                        <img src="./images/_Users_ss_Desktop_coding_chat-app-css-illustration-master_index.html(iPhone 12 Pro).png" alt="Chat App preview">
+                    </div>
+                    <div class="description">
+                        <h4>Chat App animated layout</h4>
+                        <p>Fully interactive and responsive web-design for a dog-walking start-up</p>
+                        <div class="linkbar">
+                            <a href="https://grgrnkoo.github.io/Chat-app-CSS-illustration/" target="_blank"><button class="visit"><img src="./images/icons8-link.svg" alt=""><span>Visit website</span></button></a>
+                            <a href="https://github.com/grgrnkoo/Chat-app-CSS-illustration" target="_blank"><button class="github"><img src="./images/icons8-github.svg" alt=""><span>View on GitHub</span></button></a>
+                        </div>
+                        <div class="project-skills">
+                            <img src="./images/icons8-html5.svg" alt="HTML5" class="htmlimage">
+                            <img src="./images/icons8-css3.svg" alt="CSS3">
+                        </div>
+                    </div>
+                </div>
                 <div class="project-card c3 tall">
+                    <img src="./images/grgrnkoo.github.io_Huddle-Landing-Page-with-Curved-Sections_ (1).png" alt="Huddle Landing with Curved Sections" class="preview">
+                    <div class="description">
+                        <h4>Huddle Landing Page with Curved Sections</h4>
+                        <p>Responsive design for Huddle. You will be able to find second version with alternative design below</p>
+                        <div class="linkbar">
+                            <a href="https://grgrnkoo.github.io/Huddle-Landing-Page-with-Curved-Sections/" target="_blank"><button class="visit"><img src="./images/icons8-link.svg" alt=""><span>Visit website</span></button></a>
+                            <a href="https://github.com/grgrnkoo/Huddle-Landing-Page-with-Curved-Sections" target="_blank"><button class="github"><img src="./images/icons8-github.svg" alt=""><span>View on GitHub</span></button></a>
+                        </div>
+                        <div class="project-skills">
+                            <img src="./images/icons8-html5.svg" alt="HTML5" class="htmlimage">
+                            <img src="./images/icons8-css3.svg" alt="CSS3">
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card c4 tall">
                     <img src="./images/buyabes.ru_.png" alt="Buyabes restaurant" class="preview">
                     <div class="description">
                         <h4>Buyabes restaurant</h4>
@@ -106,7 +124,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="project-card c4">
+                <div class="project-card c5">
                     <img src="./images/dragoncity.ru_.png" alt="DragonCity" class="preview">
                     <div class="description">
                         <h4>Dragon City restaurant</h4>
@@ -118,21 +136,6 @@
                             <img src="./images/icons8-html5.svg" alt="HTML5" class="htmlimage">
                             <img src="./images/icons8-css3.svg" alt="CSS3">
                             <img src="./images/icons8-wordpress.svg" alt="Wordpress" class="wpimage">
-                        </div>
-                    </div>
-                </div>
-                <div class="project-card c5">
-                    <img src="./images/grgrnkoo.github.io_Social-Proof-Section_.png" alt="Social Proof Section" class="preview">
-                    <div class="description">
-                        <h4>Social Proof section</h4>
-                        <p>Built for a startup. Fully responsive</p>
-                        <div class="linkbar">
-                            <a href="https://grgrnkoo.github.io/Social-Proof-Section/" target="_blank"><button class="visit"><img src="./images/icons8-link.svg" alt=""><span>Visit website</span></button></a>
-                            <a href="https://github.com/grgrnkoo/Social-Proof-Section" target="_blank"><button class="github"><img src="./images/icons8-github.svg" alt=""><span>View on GitHub</span></button></a>
-                        </div>
-                        <div class="project-skills">
-                            <img src="./images/icons8-html5.svg" alt="HTML5" class="htmlimage">
-                            <img src="./images/icons8-css3.svg" alt="CSS3">
                         </div>
                     </div>
                 </div>
@@ -151,52 +154,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="project-card c7">
-                    <div class="videobox">
-                        <video src="./images/chat-app.mov" class="preview" id="chatapp" muted></video>
-                        <div id="hover1"><p>Hover to play</p></div>
-                        <img src="./images/chatapppreview.png" alt="Chat App preview">
-                    </div>
-                    <div class="description">
-                        <h4>Chat App animated layout</h4>
-                        <p>Fully interactive and responsive web-design for a dog-walking start-up</p>
-                        <div class="linkbar">
-                            <a href="https://grgrnkoo.github.io/Chat-app-CSS-illustration/" target="_blank"><button class="visit"><img src="./images/icons8-link.svg" alt=""><span>Visit website</span></button></a>
-                            <a href="https://github.com/grgrnkoo/Chat-app-CSS-illustration" target="_blank"><button class="github"><img src="./images/icons8-github.svg" alt=""><span>View on GitHub</span></button></a>
-                        </div>
-                        <div class="project-skills">
-                            <img src="./images/icons8-html5.svg" alt="HTML5" class="htmlimage">
-                            <img src="./images/icons8-css3.svg" alt="CSS3">
-                        </div>
-                    </div>
-                </div>
-                <!-- <div class="project-card c8">
-                    <img src="./images/videosmile.png" alt="Blender Project" class="preview">
-                    <h4>3D house</h4>
-                    <p>I want this portfolio to include some works in Blender, because Blender models can be integrated to a websites with Three.js and i have an experience of 3D modelling</p>
-                    <div class="linkbar">
-                        
-                    </div>
-                    <div class="project-skills">
-                        <img src="./images/icons8-blender-3d.svg" alt="">
-                    </div>
-                </div> -->
-                <div class="project-card c9 medium-tall">
-                    <div class="videobox">
-                        <video src="./images/videobb0001-0150.mp4" alt="BB Guard for Spot" class="preview" id="guard" muted></video>
-                        <div id="hover2"><p>Hover to play</p></div>
-                    </div>
-                    <div class="description">
-                        <h4>3D model for Spot BMX</h4>
-                        <p>Real-life product model for Spot BMX.</p>
-                        <div class="linkbar">
-                        </div>
-                        <div class="project-skills">
-                            <img src="./images/icons8-blender-3d.svg" alt="">
-                        </div>
-                    </div>
-                </div>
-                <div class="project-card c10 medium-tall">
+                <div class="project-card c7 medium-tall">
                     <img src="./images/127.0.0.1_5500_index.html (1).png" alt="Huddle Landing Page" class="preview">
                     <div class="description">
                         <h4>Huddle Landing Page</h4>
@@ -211,18 +169,18 @@
                         </div>
                     </div>
                 </div>
-                <div class="project-card c11">
-                    <div class="videobox">
-                        <video src="./images/0001-0300.mp4" alt="" class="preview" id="donut" muted></video>
-                        <div id="hover3"><p>Hover to play</p></div>
-                    </div>
+                <div class="project-card c8">
+                    <img src="./images/grgrnkoo.github.io_Social-Proof-Section_.png" alt="Social Proof Section" class="preview">
                     <div class="description">
-                        <h4>3D donut</h4>
-                        <p>Classic well-known 3D object. I added some M&M's to make it more complicated.</p>
+                        <h4>Social Proof section</h4>
+                        <p>Built for a startup. Fully responsive</p>
                         <div class="linkbar">
+                            <a href="https://grgrnkoo.github.io/Social-Proof-Section/" target="_blank"><button class="visit"><img src="./images/icons8-link.svg" alt=""><span>Visit website</span></button></a>
+                            <a href="https://github.com/grgrnkoo/Social-Proof-Section" target="_blank"><button class="github"><img src="./images/icons8-github.svg" alt=""><span>View on GitHub</span></button></a>
                         </div>
                         <div class="project-skills">
-                            <img src="./images/icons8-blender-3d.svg" alt="Blender">
+                            <img src="./images/icons8-html5.svg" alt="HTML5" class="htmlimage">
+                            <img src="./images/icons8-css3.svg" alt="CSS3">
                         </div>
                     </div>
                 </div>
@@ -236,7 +194,7 @@
         <div class="horizontalblock">
             <div class="contactform">
                 <p>Let's make your dreams come true:</p>
-                <form action="https://formsubmit.co/69b3777eba0c80b404bcf78e51695e23" method="post">
+                <form action="https://formsubmit.co/69b3777eba0c80b404bcf78e51695e23" method="post" autocomplete="on">
                     <input type="text" name="Name" placeholder="Your name" required>
                     <input type="email" name E-Mail placeholder="Your E-Mail" required>
                     <textarea name="ideas" id="ideas" placeholder="Describe your idea" rows="5"></textarea>
@@ -245,7 +203,6 @@
             </div>
             <div class="socials">
                 <div class="socialsinner">
-                    <!-- <p>Or connect me on social media:</p> -->
                     <a href="https://t.me/grgrnkoo" target="_blank"><img src="./images/icons8-telegram.svg" alt="">Telegram</a>
                     <a href="https://www.linkedin.com/in/oleg-grigorenko-991664117/" target="_blank"><img src="./images/icons8-linkedin.svg" alt="">Linkedin</a>
                     <a href="https://twitter.com/Oleg_JS" target="_blank"><img src="./images/icons8-twitterx.svg" alt="">Twitter</a>
