--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                     <input type="text" name="Name" placeholder="Your name" required>
                     <input type="email" name E-Mail placeholder="Your E-Mail" required>
                     <textarea name="ideas" id="ideas" placeholder="Describe your idea" rows="5"></textarea>
-                    <input type="submit">
+                    <input type="submit" value="Send">
                 </form>
             </div>
             <div class="socials">
