--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oleg Grigorenko | Web Developer</title>
     <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="stylesheet" href="./src/css/fonts_eng.css">
     <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300..700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -18,6 +19,7 @@
                 <li><a href="#introduction">About Me</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a href="./index_rus.html"><img src="./images/icons8-russia-48.png" alt=""></a></li>
             </ul>
         </nav>
         <div class="nav-sign" id="menu-button">
