--- a/index_rus.html
+++ b/index_rus.html
@@ -81,7 +81,7 @@
                     <div class="videobox">
                         <video src="./images/chat-app.mov" class="preview" id="chatapp" muted></video>
                         <div id="hover1"><p>Наведи курсор</p></div>
-                        <img src="./images/_Users_ss_Desktop_coding_chat-app-css-illustration-master_index.html(iPhone 12 Pro).png" alt="Chat App preview">
+                        <img src="./images/chatapp.png" alt="Chat App preview">
                     </div>
                     <div class="description">
                         <h4>Анимированный чат-бот</h4>
